--- a/tt.html
+++ b/tt.html
@@ -2,56 +2,75 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>PR Live Test</title>
+  <title>PR Live – Station Mapping</title>
 </head>
 <body>
 
-<pre id="log">Waiting…</pre>
+<h3>Pakistan Railways – Live Station Resolver</h3>
+<pre id="log">Initializing…</pre>
 
 <script>
+const TRAIN_ID = 41;
 const log = document.getElementById("log");
 
-const ws = new WebSocket(
-  "wss://cotrolroomapi.pakraillive.com/socket.io/?EIO=4&transport=websocket"
-);
+let stationMap = {};   // StationDetailsId → StationName
 
-ws.onopen = () => {
-  console.log("WS open");
+// 1️⃣ Load stations ONCE
+async function loadStations() {
+  const res = await fetch(
+    `https://app-api.pakraillive.com/api/Train/GetTrainStationsByTrainId?id=${TRAIN_ID}`
+  );
+  const json = await res.json();
 
-  // Socket.IO handshake
-  ws.send("40");
+  json.Response.forEach(st => {
+    stationMap[String(st.StationDetailsId)] = st.StationName;
+  });
 
-  // 👇 THIS IS CRITICAL — subscribe
-  ws.send('42["joinTrain","41"]');
+  console.log("Stations loaded", stationMap);
+}
 
-  log.textContent = "Connected & subscribed…";
-};
+// 2️⃣ Connect WebSocket
+function startSocket() {
+  const ws = new WebSocket(
+    "wss://cotrolroomapi.pakraillive.com/socket.io/?EIO=4&transport=websocket"
+  );
 
-ws.onmessage = (e) => {
-  const raw = e.data;
+  ws.onopen = () => {
+    ws.send("40");                      // socket.io handshake
+    ws.send('42["joinTrain","41"]');    // subscribe
+    log.textContent = "Connected. Waiting for live data…";
+  };
 
-  if (!raw.startsWith("42")) return;
+  ws.onmessage = e => {
+    if (!e.data.startsWith("42")) return;
 
-  const payload = JSON.parse(raw.slice(2));
+    const payload = JSON.parse(e.data.slice(2));
+    const live = payload[1];
 
-  const runtimeTrainId = payload[0];
-  const live = payload[1];
+    const output = {
+      previousStation : stationMap[live.prev_st] || live.prev_st,
+      currentStation  : stationMap[live.loc]     || live.loc,
+      nextStation     : stationMap[live.next_st] || live.next_st,
+      delayMin        : live.late_by,
+      speedKmh        : live.sp,
+      nextETA         : live.NextStationETA,
+      latitude        : live.lat,
+      longitude       : live.lon,
+      status          : live.st
+    };
 
-  log.textContent = JSON.stringify({
-    runtimeTrainId,
-    latitude: live.lat,
-    longitude: live.lon,
-    delayMin: live.late_by,
-    speed: live.sp,
-    status: live.st,
-    prevStationId: live.prev_st,
-    nextStationId: live.next_st,
-    nextETA: live.NextStationETA
-  }, null, 2);
-};
+    log.textContent = JSON.stringify(output, null, 2);
+  };
 
-ws.onerror = e => console.error("WS error", e);
-ws.onclose = () => console.warn("WS closed");
+  ws.onerror = e => console.error("WS error", e);
+  ws.onclose = () => console.warn("WS closed");
+}
+
+// 3️⃣ Start everything
+(async function init() {
+  await loadStations();   // VERY IMPORTANT
+  startSocket();
+})();
 </script>
 
 </body>
