--- a/liveTest.html
+++ b/liveTest.html
@@ -1,106 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Pakistan Railways Live Train Status</title>
-<style>
-body { font-family: Arial; }
-pre { background:#111; color:#0f0; padding:10px; }
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pakistan Railways Live Train Status</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+    }
+    th, td {
+      padding: 8px 12px;
+      border: 1px solid #ccc;
+      text-align: center;
+    }
+    th {
+      background-color: #f2f2f2;
+    }
+    input, button {
+      padding: 6px 10px;
+      font-size: 16px;
+      margin-right: 5px;
+    }
+    #status {
+      margin-top: 10px;
+      font-weight: bold;
+    }
+  </style>
 </head>
-
 <body>
 
-<h2>Pak Railways Live Train Status</h2>
+<h2>Pakistan Railways – Live Train Status</h2>
 
-<label>Enter Train ID:</label>
-<input id="trainId" value="41">
+<label for="trainId">Enter Train ID:</label>
+<input type="text" id="trainId" value="27">
 <button id="startBtn">Start Tracking</button>
 
-<pre id="output">Waiting for live data...</pre>
+<div id="status">Waiting for live data…</div>
+
+<table>
+  <thead>
+    <tr>
+      <th>Train ID</th>
+      <th>Previous Station</th>
+      <th>Current Station</th>
+      <th>Next Station</th>
+      <th>Delay (min)</th>
+      <th>Next ETA</th>
+      <th>Latitude</th>
+      <th>Longitude</th>
+      <th>Speed (km/h)</th>
+      <th>Status</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr id="trainRow">
+      <td colspan="10">Waiting for live data…</td>
+    </tr>
+  </tbody>
+</table>
 
 <script>
-const output = document.getElementById("output");
-let stationMap = {};
-let ws;
-
-document.getElementById("startBtn").onclick = async () => {
+document.getElementById("startBtn").addEventListener("click", async () => {
   const trainId = document.getElementById("trainId").value.trim();
-  if (!trainId) return alert("Enter Train ID");
+  if (!trainId) return alert("Please enter a Train ID");
 
-  output.textContent = "Fetching station list...";
+  const statusEl = document.getElementById("status");
+  const row = document.getElementById("trainRow");
 
-  /* 1️⃣ Stations */
-  const res = await fetch(
-    `https://app-api.pakraillive.com/api/Train/GetTrainStationsByTrainId?id=${trainId}`
-  );
-  const json = await res.json();
+  statusEl.textContent = "Fetching station data…";
 
-  stationMap = {};
-  (json.Response || []).forEach(s => {
-    stationMap[s.StationDetailsId] = s.StationName;
-  });
+  // 1️⃣ Fetch stations for this train
+  let stations = [];
+  let stationMap = {};
+  try {
+    const res = await fetch(`https://app-api.pakraillive.com/api/Train/GetTrainStationsByTrainId?id=${trainId}`);
+    const data = await res.json();
+    stations = data.Response || [];
+    stations.forEach(s => stationMap[s.StationDetailsId] = s.StationName);
+  } catch (e) {
+    console.error("Error fetching stations:", e);
+    statusEl.textContent = "Failed to fetch stations.";
+    return;
+  }
 
-  output.textContent = "Connecting to live server...";
+  statusEl.textContent = "Connecting to WebSocket…";
 
-  /* 2️⃣ WebSocket */
-  ws = new WebSocket(
-    "wss://cotrolroomapi.pakraillive.com/socket.io/?EIO=4&transport=websocket"
-  );
+  // 2️⃣ Connect WebSocket
+  const ws = new WebSocket("wss://cotrolroomapi.pakraillive.com/socket.io/?EIO=4&transport=websocket");
 
   ws.onopen = () => {
-    console.log("WS open");
+    console.log("WS connected");
+    statusEl.textContent = "Connected. Waiting for train updates…";
 
-    /* 🔑 REQUIRED Socket.IO CONNECT */
+    // Socket.IO handshake
     ws.send("40");
 
-    output.textContent = "Connected. Waiting for train updates...";
+    // Subscribe to train
+    ws.send(`42["joinTrain","${trainId}"]`);
   };
 
   ws.onmessage = (e) => {
-    const msg = e.data;
+    const raw = e.data;
+    if (!raw.startsWith("42")) return;
 
-    /* 🔁 Ping → Pong */
-    if (msg === "2") {
-      ws.send("3");
-      return;
+    try {
+      const payload = JSON.parse(raw.slice(2));
+      const msgTrainId = payload[0];
+      const live = payload[1];
+
+      if (msgTrainId != trainId) return; // ignore other trains
+
+      // Map station IDs to names
+      const prevStation = stationMap[live.prev_st] || live.prev_st;
+      const currentStation = stationMap[live.loc] || live.loc;
+      const nextStation = stationMap[live.next_st] || live.next_st;
+
+      // Update table row
+      row.innerHTML = `
+        <td>${msgTrainId}</td>
+        <td>${prevStation}</td>
+        <td>${currentStation}</td>
+        <td>${nextStation}</td>
+        <td>${live.late_by}</td>
+        <td>${live.NextStationETA}</td>
+        <td>${live.lat}</td>
+        <td>${live.lon}</td>
+        <td>${live.sp}</td>
+        <td>${live.st}</td>
+      `;
+    } catch (err) {
+      console.error("Failed to parse WS message:", err);
     }
+  };
 
-    /* 🎯 Train data */
-    if (!msg.startsWith("42")) return;
-
-    const payload = JSON.parse(msg.slice(2));
-    const msgTrainId = payload[0];
-    const d = payload[1];
-
-    if (msgTrainId != trainId) return;
-
-    const live = {
-      trainId: msgTrainId,
-      previousStation: stationMap[d.prev_st] || d.prev_st,
-      currentStation: stationMap[d.loc] || d.loc,
-      nextStation: stationMap[d.next_st] || d.next_st,
-      delayMinutes: d.late_by,
-      nextStationETA: d.NextStationETA,
-      speedKmh: d.sp,
-      latitude: d.lat,
-      longitude: d.lon,
-      status: d.st
-    };
-
-    output.textContent = JSON.stringify(live, null, 2);
+  ws.onerror = (err) => {
+    console.error("WebSocket error:", err);
+    statusEl.textContent = "WebSocket error. Check console.";
   };
 
   ws.onclose = () => {
-    output.textContent += "\nConnection closed.";
+    console.warn("WebSocket closed");
+    statusEl.textContent += " Connection closed.";
   };
-
-  ws.onerror = err => {
-    console.error(err);
-    output.textContent = "WebSocket error";
-  };
-};
+});
 </script>
 
 </body>
