--- a/liveTest.html
+++ b/liveTest.html
@@ -16,7 +16,7 @@
 
 <h2>Pakistan Railways – Live Train Status</h2>
 <label for="trainId">Train ID:</label>
-<input type="text" id="trainId" value="41">
+<input type="text" id="trainId" value="27">
 <button id="startBtn">Start Tracking</button>
 
 <table>
@@ -39,85 +39,87 @@
   </tbody>
 </table>
 
-<!-- Socket.IO client -->
-<script src="https://cdn.socket.io/4.6.1/socket.io.min.js"></script>
 <script>
 document.getElementById("startBtn").addEventListener("click", async () => {
   const trainId = document.getElementById("trainId").value.trim();
   if (!trainId) return alert("Enter Train ID");
 
   const tbody = document.getElementById("trainData");
-  tbody.innerHTML = `<tr><td colspan="10">Connecting…</td></tr>`;
+  tbody.innerHTML = `<tr><td colspan="10">Fetching stations…</td></tr>`;
 
-  // 1️⃣ Fetch station data for this train
+  // 1️⃣ Fetch station data
   let stationMap = {};
   try {
     const res = await fetch(`https://app-api.pakraillive.com/api/Train/GetTrainStationsByTrainId?id=${trainId}`);
     const data = await res.json();
     const stations = data.Response || [];
-
-    stations.forEach(s => {
-      stationMap[s.StationDetailsId] = s.StationName;
-    });
+    stations.forEach(s => stationMap[s.StationDetailsId] = s.StationName);
   } catch (err) {
-    console.error("Failed to fetch stations:", err);
-    tbody.innerHTML = `<tr><td colspan="10">Error fetching station data</td></tr>`;
+    console.error("Error fetching stations:", err);
+    tbody.innerHTML = `<tr><td colspan="10">Failed to fetch station data</td></tr>`;
     return;
   }
 
-  // 2️⃣ Connect to Socket.IO
-  const socket = io("https://cotrolroomapi.pakraillive.com", {
-    path: "/socket.io",
-    transports: ["websocket"],
-  });
+  // 2️⃣ Connect via raw WebSocket
+  const ws = new WebSocket("wss://cotrolroomapi.pakraillive.com/socket.io/?EIO=4&transport=websocket");
 
-  socket.on("connect", () => {
-    console.log("Socket.IO connected");
-    tbody.innerHTML = `<tr><td colspan="10">Connected. Waiting for train updates…</td></tr>`;
+  ws.onopen = () => {
+    console.log("WS connected");
 
-    // Subscribe to train updates
-    socket.emit("joinTrain", trainId);
-  });
+    // Socket.IO handshake
+    ws.send("40");
 
-  socket.on("disconnect", () => {
-    console.warn("Socket.IO disconnected");
-    tbody.innerHTML = `<tr><td colspan="10">Disconnected from server</td></tr>`;
-  });
+    // Subscribe to train updates (raw Socket.IO frame)
+    ws.send(`42["joinTrain","${trainId}"]`);
 
-  // 3️⃣ Listen for live train updates
-  socket.onAny((event, data) => {
-    // data can be array [trainId, liveData]
-    if (!Array.isArray(data) || data.length < 2) return;
+    tbody.innerHTML = `<tr><td colspan="10">Connected & subscribed…</td></tr>`;
+  };
 
-    const msgTrainId = data[0];
-    const live = data[1];
+  ws.onmessage = e => {
+    const raw = e.data;
 
-    if (msgTrainId != trainId) return;
+    // Only parse live data frames starting with '42'
+    if (!raw.startsWith("42")) return;
 
-    const prevStation = stationMap[live.prev_st] || live.prev_st;
-    const currentStation = stationMap[live.loc] || live.loc;
-    const nextStation = stationMap[live.next_st] || live.next_st;
+    try {
+      const arr = JSON.parse(raw.slice(2));
+      const msgTrainId = arr[0];
+      const live = arr[1];
 
-    tbody.innerHTML = `
-      <tr>
-        <td>${msgTrainId}</td>
-        <td>${prevStation}</td>
-        <td>${currentStation}</td>
-        <td>${nextStation}</td>
-        <td>${live.late_by}</td>
-        <td>${live.NextStationETA}</td>
-        <td>${live.lat}</td>
-        <td>${live.lon}</td>
-        <td>${live.sp}</td>
-        <td>${live.st}</td>
-      </tr>
-    `;
-  });
+      if (msgTrainId != trainId) return;
 
-  socket.on("connect_error", err => {
-    console.error("Connection error:", err);
-    tbody.innerHTML = `<tr><td colspan="10">Connection error</td></tr>`;
-  });
+      const prevStation = stationMap[live.prev_st] || live.prev_st;
+      const currentStation = stationMap[live.loc] || live.loc;
+      const nextStation = stationMap[live.next_st] || live.next_st;
+
+      tbody.innerHTML = `
+        <tr>
+          <td>${msgTrainId}</td>
+          <td>${prevStation}</td>
+          <td>${currentStation}</td>
+          <td>${nextStation}</td>
+          <td>${live.late_by}</td>
+          <td>${live.NextStationETA}</td>
+          <td>${live.lat}</td>
+          <td>${live.lon}</td>
+          <td>${live.sp}</td>
+          <td>${live.st}</td>
+        </tr>
+      `;
+    } catch (err) {
+      console.error("Failed to parse live data:", err);
+    }
+  };
+
+  ws.onerror = err => {
+    console.error("WS error:", err);
+    tbody.innerHTML = `<tr><td colspan="10">WebSocket error</td></tr>`;
+  };
+
+  ws.onclose = () => {
+    console.warn("WS closed");
+    tbody.innerHTML += `<tr><td colspan="10">Connection closed</td></tr>`;
+  };
 });
 </script>
 
