--- a/tt.html
+++ b/tt.html
@@ -1,76 +1,126 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>PR Live – Station Mapping</title>
+  <title>Pakistan Railways – Live Train Tracker</title>
+  <style>
+    body { font-family: Arial, sans-serif; padding: 20px; }
+    table { border-collapse: collapse; width: 100%; margin-top: 20px; }
+    th, td { border: 1px solid #ccc; padding: 8px; text-align: center; }
+    th { background-color: #f0f0f0; }
+    input, button { padding: 6px; margin-right: 5px; }
+  </style>
 </head>
 <body>
 
-<h3>Pakistan Railways – Live Station Resolver</h3>
-<pre id="log">Initializing…</pre>
+<h2>Pakistan Railways – Live Train Tracker</h2>
+<label for="trainId">Train ID:</label>
+<input type="text" id="trainId" value="27">
+<button id="startBtn">Start Tracking</button>
+
+<h3>Live Train Data</h3>
+<table>
+  <thead>
+    <tr>
+      <th>Previous Station</th>
+      <th>Current Station</th>
+      <th>Next Station</th>
+      <th>Delay (min)</th>
+      <th>Next Station ETA</th>
+      <th>Speed (km/h)</th>
+      <th>Status</th>
+      <th>Latitude</th>
+      <th>Longitude</th>
+    </tr>
+  </thead>
+  <tbody id="trainData">
+    <tr><td colspan="9">Waiting for live data…</td></tr>
+  </tbody>
+</table>
+
+<pre id="jsonOutput"></pre>
 
 <script>
-const TRAIN_ID = 27;
-const log = document.getElementById("log");
+const startBtn = document.getElementById("startBtn");
+const trainDataBody = document.getElementById("trainData");
+const jsonOutput = document.getElementById("jsonOutput");
 
-let stationMap = {};   // StationDetailsId → StationName
+startBtn.addEventListener("click", async () => {
+  const TRAIN_ID = document.getElementById("trainId").value.trim();
+  if (!TRAIN_ID) return alert("Please enter a Train ID");
 
-// 1️⃣ Load stations ONCE
-async function loadStations() {
-  const res = await fetch(
-    `https://app-api.pakraillive.com/api/Train/GetTrainStationsByTrainId?id=${TRAIN_ID}`
-  );
-  const json = await res.json();
+  // 1️⃣ Fetch station map
+  let stationMap = {};
+  try {
+    const res = await fetch(`https://app-api.pakraillive.com/api/Train/GetTrainStationsByTrainId?id=${TRAIN_ID}`);
+    const json = await res.json();
+    (json.Response || []).forEach(st => stationMap[String(st.StationDetailsId)] = st.StationName);
+  } catch (err) {
+    console.error("Failed to fetch station data:", err);
+    trainDataBody.innerHTML = `<tr><td colspan="9">Failed to fetch station data</td></tr>`;
+    return;
+  }
 
-  json.Response.forEach(st => {
-    stationMap[String(st.StationDetailsId)] = st.StationName;
-  });
-
-  console.log("Stations loaded", stationMap);
-}
-
-// 2️⃣ Connect WebSocket
-function startSocket() {
-  const ws = new WebSocket(
-    "wss://cotrolroomapi.pakraillive.com/socket.io/?EIO=4&transport=websocket"
-  );
+  // 2️⃣ Connect WebSocket
+  const ws = new WebSocket("wss://cotrolroomapi.pakraillive.com/socket.io/?EIO=4&transport=websocket");
 
   ws.onopen = () => {
-    ws.send("40");                      // socket.io handshake
-    ws.send('42["joinTrain","41"]');    // subscribe
-    log.textContent = "Connected. Waiting for live data…";
+    ws.send("40");                    // socket.io handshake
+    ws.send(`42["joinTrain","${TRAIN_ID}"]`);  // subscribe to live updates
+    trainDataBody.innerHTML = `<tr><td colspan="9">Connected & waiting for data…</td></tr>`;
   };
 
   ws.onmessage = e => {
     if (!e.data.startsWith("42")) return;
+    try {
+      const payload = JSON.parse(e.data.slice(2));
+      const msgTrainId = payload[0];
+      const live = payload[1];
 
-    const payload = JSON.parse(e.data.slice(2));
-    const live = payload[1];
+      if (msgTrainId != TRAIN_ID) return;
 
-    const output = {
-      previousStation : stationMap[live.prev_st] || live.prev_st,
-      currentStation  : stationMap[live.loc]     || live.loc,
-      nextStation     : stationMap[live.next_st] || live.next_st,
-      delayMin        : live.late_by,
-      speedKmh        : live.sp,
-      nextETA         : live.NextStationETA,
-      latitude        : live.lat,
-      longitude       : live.lon,
-      status          : live.st
-    };
+      const prevStation = stationMap[live.prev_st] || live.prev_st;
+      const currentStation = stationMap[live.loc] || live.loc;
+      const nextStation = stationMap[live.next_st] || live.next_st;
 
-    log.textContent = JSON.stringify(output, null, 2);
+      const output = {
+        previousStation: prevStation,
+        currentStation: currentStation,
+        nextStation: nextStation,
+        delayMin: live.late_by,
+        nextETA: live.NextStationETA,
+        speedKmh: live.sp,
+        status: live.st,
+        latitude: live.lat,
+        longitude: live.lon
+      };
+
+      // Update HTML table
+      trainDataBody.innerHTML = `
+        <tr>
+          <td>${output.previousStation}</td>
+          <td>${output.currentStation}</td>
+          <td>${output.nextStation}</td>
+          <td>${output.delayMin}</td>
+          <td>${output.nextETA}</td>
+          <td>${output.speedKmh}</td>
+          <td>${output.status}</td>
+          <td>${output.latitude}</td>
+          <td>${output.longitude}</td>
+        </tr>
+      `;
+
+      // Show JSON output for debugging
+      jsonOutput.textContent = JSON.stringify(output, null, 2);
+
+    } catch (err) {
+      console.error("Failed to parse live data:", err);
+    }
   };
 
-  ws.onerror = e => console.error("WS error", e);
-  ws.onclose = () => console.warn("WS closed");
-}
-
-// 3️⃣ Start everything
-(async function init() {
-  await loadStations();   // VERY IMPORTANT
-  startSocket();
-})();
+  ws.onerror = err => console.error("WS error:", err);
+  ws.onclose = () => console.warn("WebSocket closed");
+});
 </script>
 
 </body>
