--- a/liveTest.html
+++ b/liveTest.html
@@ -1,126 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pakistan Railways – Live Train Status</title>
-  <style>
-    body { font-family: Arial, sans-serif; padding: 20px; }
-    table { border-collapse: collapse; width: 100%; margin-top: 20px; }
-    th, td { border: 1px solid #ccc; padding: 8px; text-align: center; }
-    th { background-color: #f0f0f0; }
-    input, button { padding: 6px; margin-right: 5px; }
-  </style>
+  <title>PR Live Test</title>
 </head>
 <body>
 
-<h2>Pakistan Railways – Live Train Status</h2>
-<label for="trainId">Train ID:</label>
-<input type="text" id="trainId" value="27">
-<button id="startBtn">Start Tracking</button>
-
-<table>
-  <thead>
-    <tr>
-      <th>Train ID</th>
-      <th>Previous Station</th>
-      <th>Current Station</th>
-      <th>Next Station</th>
-      <th>Delay (min)</th>
-      <th>Next ETA</th>
-      <th>Latitude</th>
-      <th>Longitude</th>
-      <th>Speed (km/h)</th>
-      <th>Status</th>
-    </tr>
-  </thead>
-  <tbody id="trainData">
-    <tr><td colspan="10">Waiting for live data…</td></tr>
-  </tbody>
-</table>
+<pre id="log">Waiting…</pre>
 
 <script>
-document.getElementById("startBtn").addEventListener("click", async () => {
-  const trainId = document.getElementById("trainId").value.trim();
-  if (!trainId) return alert("Enter Train ID");
+const log = document.getElementById("log");
+const TRAIN_ID = "41"; // change as needed
 
-  const tbody = document.getElementById("trainData");
-  tbody.innerHTML = `<tr><td colspan="10">Fetching stations…</td></tr>`;
+let stationMap = {}; // map of StationDetailsId -> StationName
 
-  // 1️⃣ Fetch station data
-  let stationMap = {};
+// 1️⃣ Load stations for this train once
+async function loadStations() {
   try {
-    const res = await fetch(`https://app-api.pakraillive.com/api/Train/GetTrainStationsByTrainId?id=${trainId}`);
-    const data = await res.json();
-    const stations = data.Response || [];
-    stations.forEach(s => stationMap[s.StationDetailsId] = s.StationName);
+    const res = await fetch(`https://app-api.pakraillive.com/api/Train/GetTrainStationsByTrainId?id=${TRAIN_ID}`);
+    const json = await res.json();
+    (json.Response || []).forEach(st => {
+      stationMap[String(st.StationDetailsId)] = st.StationName;
+    });
+    console.log("Station map loaded:", stationMap);
   } catch (err) {
-    console.error("Error fetching stations:", err);
-    tbody.innerHTML = `<tr><td colspan="10">Failed to fetch station data</td></tr>`;
-    return;
+    console.error("Failed to load stations:", err);
   }
+}
 
-  // 2️⃣ Connect via raw WebSocket
-  const ws = new WebSocket("wss://cotrolroomapi.pakraillive.com/socket.io/?EIO=4&transport=websocket");
+// 2️⃣ Start WebSocket
+const ws = new WebSocket(
+  "wss://cotrolroomapi.pakraillive.com/socket.io/?EIO=4&transport=websocket"
+);
 
-  ws.onopen = () => {
-    console.log("WS connected");
+ws.onopen = () => {
+  console.log("WS open");
 
-    // Socket.IO handshake
-    ws.send("40");
+  // Socket.IO handshake
+  ws.send("40");
 
-    // Subscribe to train updates (raw Socket.IO frame)
-    ws.send(`42["joinTrain","${trainId}"]`);
+  // Subscribe to this train
+  ws.send(`42["joinTrain","${TRAIN_ID}"]`);
 
-    tbody.innerHTML = `<tr><td colspan="10">Connected & subscribed…</td></tr>`;
-  };
+  log.textContent = "Connected & subscribed…";
+};
 
-  ws.onmessage = e => {
-    const raw = e.data;
+ws.onmessage = (e) => {
+  const raw = e.data;
 
-    // Only parse live data frames starting with '42'
-    if (!raw.startsWith("42")) return;
+  if (!raw.startsWith("42")) return;
 
-    try {
-      const arr = JSON.parse(raw.slice(2));
-      const msgTrainId = arr[0];
-      const live = arr[1];
+  const payload = JSON.parse(raw.slice(2));
+  const runtimeTrainId = payload[0];
+  const live = payload[1];
 
-      if (msgTrainId != trainId) return;
+  // map IDs to station names if available
+  const prevStation = stationMap[live.prev_st] || live.prev_st;
+  const nextStation = stationMap[live.next_st] || live.next_st;
+  const currentStation = stationMap[live.loc] || live.loc;
 
-      const prevStation = stationMap[live.prev_st] || live.prev_st;
-      const currentStation = stationMap[live.loc] || live.loc;
-      const nextStation = stationMap[live.next_st] || live.next_st;
+  log.textContent = JSON.stringify({
+    runtimeTrainId,
+    previousStation: prevStation,
+    currentStation: currentStation,
+    nextStation: nextStation,
+    latitude: live.lat,
+    longitude: live.lon,
+    delayMin: live.late_by,
+    speed: live.sp,
+    status: live.st,
+    nextETA: live.NextStationETA
+  }, null, 2);
+};
 
-      tbody.innerHTML = `
-        <tr>
-          <td>${msgTrainId}</td>
-          <td>${prevStation}</td>
-          <td>${currentStation}</td>
-          <td>${nextStation}</td>
-          <td>${live.late_by}</td>
-          <td>${live.NextStationETA}</td>
-          <td>${live.lat}</td>
-          <td>${live.lon}</td>
-          <td>${live.sp}</td>
-          <td>${live.st}</td>
-        </tr>
-      `;
-    } catch (err) {
-      console.error("Failed to parse live data:", err);
-    }
-  };
+ws.onerror = e => console.error("WS error", e);
+ws.onclose = () => console.warn("WS closed");
 
-  ws.onerror = err => {
-    console.error("WS error:", err);
-    tbody.innerHTML = `<tr><td colspan="10">WebSocket error</td></tr>`;
-  };
-
-  ws.onclose = () => {
-    console.warn("WS closed");
-    tbody.innerHTML += `<tr><td colspan="10">Connection closed</td></tr>`;
-  };
-});
+// load stations once before listening
+loadStations();
 </script>
 
 </body>
