--- a/liveTest.html
+++ b/liveTest.html
@@ -2,81 +2,74 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>PR Live Test</title>
+  <title>PR Current Train Status</title>
 </head>
 <body>
 
-<pre id="log">Waiting…</pre>
+<h3>Pakistan Railways – Current Train Status</h3>
+<pre id="log">Loading current status…</pre>
 
 <script>
 const log = document.getElementById("log");
-const TRAIN_ID = "41"; // change as needed
+const TRAIN_ID = "27";
 
-let stationMap = {}; // map of StationDetailsId -> StationName
+let stationMap = {};
+let snapshotTaken = false;
 
-// 1️⃣ Load stations for this train once
+// 1️⃣ Load station list once
 async function loadStations() {
-  try {
-    const res = await fetch(`https://app-api.pakraillive.com/api/Train/GetTrainStationsByTrainId?id=${TRAIN_ID}`);
-    const json = await res.json();
-    (json.Response || []).forEach(st => {
-      stationMap[String(st.StationDetailsId)] = st.StationName;
-    });
-    console.log("Station map loaded:", stationMap);
-  } catch (err) {
-    console.error("Failed to load stations:", err);
-  }
+  const res = await fetch(
+    `https://app-api.pakraillive.com/api/Train/GetTrainStationsByTrainId?id=${TRAIN_ID}`
+  );
+  const json = await res.json();
+
+  (json.Response || []).forEach(st => {
+    stationMap[String(st.StationDetailsId)] = st.StationName;
+  });
 }
 
-// 2️⃣ Start WebSocket
+// 2️⃣ Open WebSocket
 const ws = new WebSocket(
   "wss://cotrolroomapi.pakraillive.com/socket.io/?EIO=4&transport=websocket"
 );
 
 ws.onopen = () => {
-  console.log("WS open");
-
-  // Socket.IO handshake
   ws.send("40");
-
-  // Subscribe to this train
   ws.send(`42["joinTrain","${TRAIN_ID}"]`);
-
-  log.textContent = "Connected & subscribed…";
 };
 
 ws.onmessage = (e) => {
-  const raw = e.data;
+  if (snapshotTaken) return;
+  if (!e.data.startsWith("42")) return;
 
-  if (!raw.startsWith("42")) return;
-
-  const payload = JSON.parse(raw.slice(2));
-  const runtimeTrainId = payload[0];
+  const payload = JSON.parse(e.data.slice(2));
   const live = payload[1];
 
-  // map IDs to station names if available
-  const prevStation = stationMap[live.prev_st] || live.prev_st;
-  const nextStation = stationMap[live.next_st] || live.next_st;
-  const currentStation = stationMap[live.loc] || live.loc;
+  // 🟢 TAKE FIRST SNAPSHOT ONLY
+  snapshotTaken = true;
 
-  log.textContent = JSON.stringify({
-    runtimeTrainId,
-    previousStation: prevStation,
-    currentStation: currentStation,
-    nextStation: nextStation,
-    latitude: live.lat,
-    longitude: live.lon,
-    delayMin: live.late_by,
-    speed: live.sp,
-    status: live.st,
-    nextETA: live.NextStationETA
-  }, null, 2);
+  const output = {
+    lastCrossedStation : stationMap[live.prev_st] || live.prev_st,
+    nextStation        : stationMap[live.next_st] || live.next_st,
+    latitude           : live.lat,
+    longitude          : live.lon,
+    delayMinutes       : live.late_by,
+    speedKmh           : live.sp,
+    nextStationETA     : live.NextStationETA,
+    status             : live.st === "A" ? "RUNNING" : "UNKNOWN",
+    capturedAt         : new Date().toLocaleString()
+  };
+
+  log.textContent = JSON.stringify(output, null, 2);
+
+  // 🛑 Stop further updates
+  ws.close();
 };
 
-ws.onerror = e => console.error("WS error", e);
-ws.onclose = () => console.warn("WS closed");
+ws.onerror = () => {
+  log.textContent = "Unable to fetch live status.";
+};
 
-// load stations once before listening
 loadStations();
 </script>
 
