--- a/liveTest.html
+++ b/liveTest.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>PR Current Train Status</title>
+  <title>Pakistan Railways – Current Train Status</title>
 </head>
 <body>
 
@@ -14,9 +14,9 @@ const log = document.getElementById("log");
 const TRAIN_ID = "27";
 
 let stationMap = {};
-let snapshotTaken = false;
+let captured = false;   // ⭐ IMPORTANT
 
-// 1️⃣ Load station list once
+// 1️⃣ Load stations once
 async function loadStations() {
   const res = await fetch(
     `https://app-api.pakraillive.com/api/Train/GetTrainStationsByTrainId?id=${TRAIN_ID}`
@@ -28,49 +28,54 @@ async function loadStations() {
   });
 }
 
-// 2️⃣ Open WebSocket
-const ws = new WebSocket(
-  "wss://cotrolroomapi.pakraillive.com/socket.io/?EIO=4&transport=websocket"
-);
+// 2️⃣ WebSocket snapshot
+function getSnapshot() {
+  const ws = new WebSocket(
+    "wss://cotrolroomapi.pakraillive.com/socket.io/?EIO=4&transport=websocket"
+  );
 
-ws.onopen = () => {
-  ws.send("40");
-  ws.send(`42["joinTrain","${TRAIN_ID}"]`);
-};
-
-ws.onmessage = (e) => {
-  if (snapshotTaken) return;
-  if (!e.data.startsWith("42")) return;
-
-  const payload = JSON.parse(e.data.slice(2));
-  const live = payload[1];
-
-  // 🟢 TAKE FIRST SNAPSHOT ONLY
-  snapshotTaken = true;
-
-  const output = {
-    lastCrossedStation : stationMap[live.prev_st] || live.prev_st,
-    nextStation        : stationMap[live.next_st] || live.next_st,
-    latitude           : live.lat,
-    longitude          : live.lon,
-    delayMinutes       : live.late_by,
-    speedKmh           : live.sp,
-    nextStationETA     : live.NextStationETA,
-    status             : live.st === "A" ? "RUNNING" : "UNKNOWN",
-    capturedAt         : new Date().toLocaleString()
+  ws.onopen = () => {
+    ws.send("40");
+    ws.send(`42["joinTrain","${TRAIN_ID}"]`);
   };
 
-  log.textContent = JSON.stringify(output, null, 2);
+  ws.onmessage = (e) => {
+    if (captured) return;
+    if (!e.data.startsWith("42")) return;
 
-  // 🛑 Stop further updates
-  ws.close();
-};
+    const payload = JSON.parse(e.data.slice(2));
+    const live = payload[1];
 
-ws.onerror = () => {
-  log.textContent = "Unable to fetch live status.";
-};
+    // 📌 SNAPSHOT DATA
+    const snapshot = {
+      trainId: TRAIN_ID,
+      lastCrossedStation: stationMap[live.prev_st] || live.prev_st,
+      nextStation: stationMap[live.next_st] || live.next_st,
+      currentLocation: stationMap[live.loc] || "Between stations",
+      latitude: live.lat,
+      longitude: live.lon,
+      delayMinutes: live.late_by,
+      speedKmh: live.sp,
+      nextStationETA: live.NextStationETA,
+      status: live.st === "A" ? "RUNNING" : "UNKNOWN"
+    };
 
-loadStations();
+    log.textContent = JSON.stringify(snapshot, null, 2);
+
+    captured = true;   // ⭐ freeze data
+    ws.close();        // ⭐ stop updates
+  };
+
+  ws.onerror = () => {
+    log.textContent = "Failed to load current status.";
+  };
+}
+
+// 3️⃣ Start
+(async function init() {
+  await loadStations();
+  getSnapshot();
+})();
 </script>
 
 </body>
