--- a/liveTest.html
+++ b/liveTest.html
@@ -7,29 +7,29 @@
 <body>
 
 <h3>Pakistan Railways – Current Train Status</h3>
-<pre id="log">Loading current status…</pre>
+<pre id="output">Loading current status…</pre>
 
 <script>
-const log = document.getElementById("log");
 const TRAIN_ID = "27";
+const output = document.getElementById("output");
 
 let stationMap = {};
-let captured = false;   // ⭐ IMPORTANT
+let snapshotTaken = false;
 
-// 1️⃣ Load stations once
+// Load station list
 async function loadStations() {
   const res = await fetch(
     `https://app-api.pakraillive.com/api/Train/GetTrainStationsByTrainId?id=${TRAIN_ID}`
   );
   const json = await res.json();
 
-  (json.Response || []).forEach(st => {
-    stationMap[String(st.StationDetailsId)] = st.StationName;
+  json.Response.forEach(s => {
+    stationMap[String(s.StationDetailsId)] = s.StationName;
   });
 }
 
-// 2️⃣ WebSocket snapshot
-function getSnapshot() {
+// WebSocket
+function startSocket() {
   const ws = new WebSocket(
     "wss://cotrolroomapi.pakraillive.com/socket.io/?EIO=4&transport=websocket"
   );
@@ -39,19 +39,21 @@ function getSnapshot() {
     ws.send(`42["joinTrain","${TRAIN_ID}"]`);
   };
 
-  ws.onmessage = (e) => {
-    if (captured) return;
+  ws.onmessage = e => {
+    if (snapshotTaken) return;
     if (!e.data.startsWith("42")) return;
 
     const payload = JSON.parse(e.data.slice(2));
     const live = payload[1];
 
-    // 📌 SNAPSHOT DATA
-    const snapshot = {
+    snapshotTaken = true;
+    ws.close(); // stop updates
+
+    const result = {
       trainId: TRAIN_ID,
       lastCrossedStation: stationMap[live.prev_st] || live.prev_st,
       nextStation: stationMap[live.next_st] || live.next_st,
-      currentLocation: stationMap[live.loc] || "Between stations",
+      currentLocation: live.sp > 0 ? "Between stations" : "Stopped",
       latitude: live.lat,
       longitude: live.lon,
       delayMinutes: live.late_by,
@@ -60,21 +62,14 @@ function getSnapshot() {
       status: live.st === "A" ? "RUNNING" : "UNKNOWN"
     };
 
-    log.textContent = JSON.stringify(snapshot, null, 2);
-
-    captured = true;   // ⭐ freeze data
-    ws.close();        // ⭐ stop updates
-  };
-
-  ws.onerror = () => {
-    log.textContent = "Failed to load current status.";
+    output.textContent = JSON.stringify(result, null, 2);
   };
 }
 
-// 3️⃣ Start
-(async function init() {
+// Init
+(async function () {
   await loadStations();
-  getSnapshot();
+  startSocket();
 })();
 </script>
 
