--- a/liveTest.html
+++ b/liveTest.html
@@ -16,19 +16,19 @@ const output = document.getElementById("output");
 let stationMap = {};
 let snapshotTaken = false;
 
-// Load station list
+/* 1️⃣ Load stations */
 async function loadStations() {
   const res = await fetch(
     `https://app-api.pakraillive.com/api/Train/GetTrainStationsByTrainId?id=${TRAIN_ID}`
   );
   const json = await res.json();
 
-  json.Response.forEach(s => {
-    stationMap[String(s.StationDetailsId)] = s.StationName;
+  (json.Response || []).forEach(st => {
+    stationMap[String(st.StationDetailsId)] = st.StationName;
   });
 }
 
-// WebSocket
+/* 2️⃣ Start socket */
 function startSocket() {
   const ws = new WebSocket(
     "wss://cotrolroomapi.pakraillive.com/socket.io/?EIO=4&transport=websocket"
@@ -40,33 +40,40 @@ function startSocket() {
   };
 
   ws.onmessage = e => {
-    if (snapshotTaken) return;
-    if (!e.data.startsWith("42")) return;
+    if (!e.data.startsWith("42") || snapshotTaken) return;
 
     const payload = JSON.parse(e.data.slice(2));
     const live = payload[1];
 
-    snapshotTaken = true;
-    ws.close(); // stop updates
+    snapshotTaken = true; // ⛔ stop after first snapshot
+
+    const lastCrossed = stationMap[live.prev_st] || live.prev_st;
+    const nextStation = stationMap[live.next_st] || live.next_st;
 
     const result = {
       trainId: TRAIN_ID,
-      lastCrossedStation: stationMap[live.prev_st] || live.prev_st,
-      nextStation: stationMap[live.next_st] || live.next_st,
-      currentLocation: live.sp > 0 ? "Between stations" : "Stopped",
+      lastCrossedStation: lastCrossed,
+      nextStation: nextStation,
+      currentLocation: `Between ${lastCrossed} and ${nextStation}`,
       latitude: live.lat,
       longitude: live.lon,
       delayMinutes: live.late_by,
       speedKmh: live.sp,
       nextStationETA: live.NextStationETA,
-      status: live.st === "A" ? "RUNNING" : "UNKNOWN"
+      status: live.st === "A" ? "RUNNING" : "STOPPED"
     };
 
     output.textContent = JSON.stringify(result, null, 2);
+
+    ws.close(); // ✅ STOP STREAM
+  };
+
+  ws.onerror = () => {
+    output.textContent = "Failed to load live status.";
   };
 }
 
-// Init
+/* 3️⃣ Init */
 (async function () {
   await loadStations();
   startSocket();
