--- a/liveTest.html
+++ b/liveTest.html
@@ -10,26 +10,28 @@
 <pre id="output">Loading current status…</pre>
 
 <script>
-const TRAIN_ID = "27";
+const TRAIN_ID = "27"; // change train here
 const output = document.getElementById("output");
 
 let stationMap = {};
 let snapshotTaken = false;
 
-/* 1️⃣ Load stations */
+// 1️⃣ Load station list
 async function loadStations() {
   const res = await fetch(
     `https://app-api.pakraillive.com/api/Train/GetTrainStationsByTrainId?id=${TRAIN_ID}`
   );
   const json = await res.json();
 
-  (json.Response || []).forEach(st => {
+  json.Response.forEach(st => {
     stationMap[String(st.StationDetailsId)] = st.StationName;
   });
 }
 
-/* 2️⃣ Start socket */
-function startSocket() {
+// 2️⃣ Start WebSocket
+async function start() {
+  await loadStations();
+
   const ws = new WebSocket(
     "wss://cotrolroomapi.pakraillive.com/socket.io/?EIO=4&transport=websocket"
   );
@@ -45,16 +47,12 @@ function startSocket() {
     const payload = JSON.parse(e.data.slice(2));
     const live = payload[1];
 
-    snapshotTaken = true; // ⛔ stop after first snapshot
-
-    const lastCrossed = stationMap[live.prev_st] || live.prev_st;
-    const nextStation = stationMap[live.next_st] || live.next_st;
-
+    // Build snapshot
     const result = {
       trainId: TRAIN_ID,
-      lastCrossedStation: lastCrossed,
-      nextStation: nextStation,
-      currentLocation: `Between ${lastCrossed} and ${nextStation}`,
+      lastCrossedStation: stationMap[live.prev_st] || live.prev_st,
+      nextStation: stationMap[live.next_st] || live.next_st,
+      currentLocation: live.sp > 0 ? "Between stations" : "At station",
       latitude: live.lat,
       longitude: live.lon,
       delayMinutes: live.late_by,
@@ -65,7 +63,8 @@ function startSocket() {
 
     output.textContent = JSON.stringify(result, null, 2);
 
-    ws.close(); // ✅ STOP STREAM
+    snapshotTaken = true;
+    ws.close(); // 🔴 STOP after first snapshot
   };
 
   ws.onerror = () => {
@@ -73,11 +72,7 @@ function startSocket() {
   };
 }
 
-/* 3️⃣ Init */
-(async function () {
-  await loadStations();
-  startSocket();
-})();
+start();
 </script>
 
 </body>
