--- a/liveTest.html
+++ b/liveTest.html
@@ -110,6 +110,6 @@ startWebSocket();
 </script>
 
 <!-- Google Maps API -->
-<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6TqtNKXjuXBMYe0iuFQjvrVFJOQ__3jc"></script>
 </body>
 </html>
