--- a/liveTest.html
+++ b/liveTest.html
@@ -90,6 +90,6 @@ document.getElementById("getStatusBtn").addEventListener("click", getTrainStatus
 </script>
 
 <!-- Google Maps API: replace YOUR_API_KEY below with your actual API key -->
-<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6TqtNKXjuXBMYe0iuFQjvrVFJOQ__3jc"></script>
 </body>
 </html>
